fix the problem of z-index

--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
 }
 
 .map { 
-  height: 95%; 
+  height: 100%; 
 }
 #section1 {
   background-color: darkseagreen;
@@ -116,4 +116,9 @@ body {
   bottom: 0px;
   right: 5px;
   color:white;
+}
+#park-filters {
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
